Ajuste em service do GoogleBooks